JSAI/error/src/test/resources/scoping/v324.js

var x = Infinity;
print(x);